# DSA_labs

./: CMakeLists.txt
labs/lab_01/: CMakeLists.txt  functions.c  functions.h  main.c
labs/lab_03/: CMakeLists.txt  Student_functions.c  Student_functions.h  main.c
labs/lab_04/: CMakeLists.txt  Student_functions.c  Student_functions.h  main.c
labs/lab_05/: CMakeLists.txt  main.c  stack_functions.c  stack_functions.h
labs/lab_09/simple_list/: CMakeLists.txt
labs/lab_11/: main.c
labs/lab_12/: main.c
